fixed some obvious bugs