@@ -44,8 +44,8 @@
  *  may freely choose the license terms applicable to such Node, including
  *  when such Node is propagated with or for interoperation with KNIME.
  * --------------------------------------------------------------------- *
- * 
- * 2006-06-08 (tm): reviewed 
+ *
+ * 2006-06-08 (tm): reviewed
  */
 package org.knime.core.node.tableview;
 
@@ -65,7 +65,7 @@ import org.knime.core.data.def.DefaultTable;
 import org.knime.core.node.property.hilite.HiLiteHandler;
 
 
-/** 
+/**
  * Frame for a {@link org.knime.core.node.tableview.TableContentView}. It
  * simply puts a table view into a frame, adds a menu bar (by now with one item
  * "Close") and displays it.
@@ -73,7 +73,7 @@ import org.knime.core.node.property.hilite.HiLiteHandler;
  * <b>Note:</b>This class is obsolete as a table view pops up in an specific
  * frame in the flow. But this view is currently used inside the port to show
  * its data table. Might be extended.
- * 
+ *
  * @author Bernd Wiswedel, University of Konstanz
  * @see org.knime.core.node.tableview.TableContentView
  * @see org.knime.core.node.tableview.TableContentModel
@@ -82,11 +82,11 @@ public class TableViewFrame extends JFrame {
     private static final long serialVersionUID = -931131149550199849L;
     /** Scroll pane to be displayed. Holds the table in its view port */
     private final TableView m_scroller;
-    
+
     /**
-     * Opens new frame and displays the <code>TableContentView</code> in a 
+     * Opens new frame and displays the <code>TableContentView</code> in a
      * scroll pane.
-     * 
+     *
      * @param view the table content view to display.
      * @throws NullPointerException if <code>view</code> is <code>null</code>.
      */
@@ -99,12 +99,13 @@ public class TableViewFrame extends JFrame {
         JMenuItem item = new JMenuItem("Close");
         // emulate same handling as done by JFrame
         item.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(final ActionEvent e) {
                 int defaultCloseOperation = getDefaultCloseOperation();
                 switch (defaultCloseOperation) {
-                    case WindowConstants.DO_NOTHING_ON_CLOSE: 
+                    case WindowConstants.DO_NOTHING_ON_CLOSE:
                         return;
-                    case WindowConstants.HIDE_ON_CLOSE: 
+                    case WindowConstants.HIDE_ON_CLOSE:
                         TableViewFrame.this.setVisible(false);
                         return;
                     case WindowConstants.DISPOSE_ON_CLOSE:
@@ -123,8 +124,8 @@ public class TableViewFrame extends JFrame {
         menuBar.add(menu);
         setJMenuBar(menuBar);
         m_scroller = new TableView(view);
-        
-        // TableModelListener that prints the row and column count in the 
+
+        // TableModelListener that prints the row and column count in the
         // frame's title bar. It is updated as new rows are inserted (user
         // scrolls down)
         view.getContentModel().addTableModelListener(new TableModelListener() {
@@ -136,60 +137,60 @@ public class TableViewFrame extends JFrame {
                 }
             }
         });
-        
+
         getJMenuBar().add(m_scroller.createHiLiteMenu());
         getJMenuBar().add(m_scroller.createNavigationMenu());
         getJMenuBar().add(m_scroller.createViewMenu());
-        
+
         getContentPane().add(m_scroller);
         updateTitle();
         pack();
         setVisible(true);
-        
+
     } // TableViewFrame(TableContentView)
-    
-    /** 
+
+    /**
      * Creates a new frame by initializing a new {@link TableContentView}
      * and displays it.
-     * 
+     *
      * @param table the table to display
      * @see TableContentView#TableContentView(DataTable)
-     * @throws NullPointerException if <code>table</code> is <code>null</code>. 
-     */ 
+     * @throws NullPointerException if <code>table</code> is <code>null</code>.
+     */
     public TableViewFrame(final DataTable table) {
         this(new TableContentView(table));
     }
-    
-    /** 
+
+    /**
      * Get reference to underlying <code>TableView</code>.
-     * 
+     *
      * @return the table view displayed.
      */
     public TableView getTableView() {
         return m_scroller;
     }
-    
+
     /**
      * Delegating method to internal table view.
-     * 
+     *
      * @return if data is available
      */
     public boolean hasData() {
         return m_scroller.hasData();
     }
-    
+
     /**
      * Delegating method to internal table view.
-     * 
+     *
      * @return if hilite handler has been set
      */
     public boolean hasHiLiteHandler() {
         return m_scroller.hasHiLiteHandler();
     }
-    
+
     /**
      * Delegating method to internal table view.
-     * 
+     *
      * @param data New data to be displayed
      */
     public void setDataTable(final DataTable data) {
@@ -198,15 +199,15 @@ public class TableViewFrame extends JFrame {
 
     /**
      * Delegating method to internal table view.
-     * 
+     *
      * @param hiLiteHdl A new hilite handler.
      */
     public void setHiLiteHandler(final HiLiteHandler hiLiteHdl) {
         m_scroller.setHiLiteHandler(hiLiteHdl);
     }
 
-    /** 
-     * Updates the title of the frame. It prints: 
+    /**
+     * Updates the title of the frame. It prints:
      * "Table View (#rows[+] x #cols)". It is invoked each time new rows are
      * inserted (user scrolls down).
      */
@@ -220,16 +221,16 @@ public class TableViewFrame extends JFrame {
         title.append(view.getColumnCount() + ")");
         setTitle(title.toString());
     }
-    
+
 
     /** Main method for testing purposes.
      * @param args Ignored.
      */
     public static void main(final String[] args) {
         Object[][] os = new Object[][] {
-                new Object[] {new Integer(1), new Double(1.1), "eins"},
-                new Object[] {new Integer(2), new Double(2.1), "zwei"},
-                new Object[] {new Integer(3), new Double(3.1), "drei"}
+                new Object[] {Integer.valueOf(1), new Double(1.1), "eins"},
+                new Object[] {Integer.valueOf(2), new Double(2.1), "zwei"},
+                new Object[] {Integer.valueOf(3), new Double(3.1), "drei"}
         };
         DefaultTable table = new DefaultTable(os);
         new TableViewFrame(table);
